using UnityEngine;
using System.Collections;

public static class Const
{
    public static class Tags
    {
        public const string Player = "Player";
    }

    public static class Player
    {
        public const string animJump = "Jump";
        public const string animSpeed = "Speed";
        public const string animIsSleeping = "IsSleeping";

    }
}